create a express server proxying api call for development mode

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "calendar-heatmap",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3002",
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
