--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "fontawesome": "^4.7.2",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-calendar-heatmap": "^1.7.0",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "react-tooltip": "^3.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
