--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3002",
   "dependencies": {
     "axios": "^0.18.0",
+    "bluebird": "^3.5.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "fontawesome": "^4.7.2",
@@ -14,7 +15,9 @@
     "react-calendar-heatmap": "^1.7.0",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
-    "react-tooltip": "^3.8.4"
+    "react-tooltip": "^3.8.4",
+    "redis": "^2.8.0",
+    "redis-client": "^0.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
